plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.devcourse'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '20'
}

repositories {
    mavenCentral()
}

dependencies {
    // Bean Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // THYMELEAF
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // WEBJARS - AXIOS
    implementation 'org.webjars.npm:axios:0.27.2'

    // Jasypt
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // db
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // loging
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'

    // jwt
    implementation "io.jsonwebtoken:jjwt:0.9.1"
    implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
    implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    //Json
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
}

configurations {
   all {
       exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
   }
}

tasks.named('test') {
    useJUnitPlatform()
}
